syntax = "proto3";

option csharp_namespace = "Orders.Application.Grpc";
package orders;

message CreateOrderItem {
  string productId = 1;
  string productName = 2;
  int32 quantity = 3;
  double unitPrice = 4;
  string currency = 5;
}

message CreateOrderRequest {
  string customerId = 1;
  string currency = 2;
  repeated CreateOrderItem items = 3;
}

message OrderItem {
  string id = 1;
  string productId = 2;
  string productName = 3;
  int32 quantity = 4;
  double unitPrice = 5;
  string currency = 6;
}

message Order {
  string id = 1;
  string customerId = 2;
  repeated OrderItem items = 3;
  double totalPrice = 4;
  string currency = 5;
  string status = 6;
  string createdAt = 7; // ISO 8601
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrdersRequest {}
message GetOrdersResponse {
  repeated Order orders = 1;
}

message GetOrderRequest {
  string orderId = 1;
}
message GetOrderResponse {
  Order order = 1;
}

service Orders {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}